infra/k8s-dev/ingress-srv.yaml
apiVersion: extension/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  spec:
    rules:
      - host: localhost
        http:
          paths:
            - path : /api/auth/?(.*)
              backend: 
                serviceName: auth-srv 
                servicePort: 3000
